# LabNexus

./: .gitattributes  .gitignore  CMakeLists.txt  main.cpp  pch.h
.github/: CODEOWNERS
.github/workflows/: qt6-build-check.yml
.run/: LabNexus.run.xml  TestBooking.run.xml  TestDB.run.xml  TestLogs.run.xml  TestMail.run.xml  所有 CTest.run.xml  所有测试.run.xml
assets/Icon/: SegoeFluentIcons.qrc
assets/LandScapes/: LandScape.qrc
assets/Logo/: Logo1.psd  LogoResource.qrc
assets/style/: blurredTranslucent.h  fluentDesign.qss  style.qrc
assets/style/res/fabric-icons-font/: README.md  fabric-icons.html
assets/style/res/fabric-icons-font/css/: fabric-icons-inline.css  fabric-icons.css
assets/style/res/fabric-icons-font/scss/: fabric-icons-inline.scss  fabric-icons.scss
assets/style/res/fabric-icons-font/src/: IconNames.ts  fabric-icons.ts  iconAliases.ts  index.ts
assets/style/res/fabric-icons-font/src/data/: AllIconNames.json
module/data/: data_Booking.cpp  data_Booking.h  data_EquipmentManage.cpp  data_EquipmentManage.h  data_UserControl.cpp  data_UserControl.h  data_mail.cpp  data_mail.h
module/model/: ApprovalStatusDelegate.cpp  ApprovalStatusDelegate.h  BookingDataModel.cpp  BookingDataModel.h  EquipmentDataModel.cpp  EquipmentDataModel.h  RepairStatusDelegate.cpp  RepairStatusDelegate.h  filterproxymdel.cpp  filterproxymdel.h
module/scanner/: DbCaculator.cpp  DbCaculator.h  InventoryAlert.cpp  InventoryAlert.h  WorkAlert.cpp  WorkAlert.h
scripts/: windows-publish.ps1
service/MutiWindow/: MutiWindow.cpp  MutiWindow.h
service/database/: databaseManager.cpp  databaseManager.h  databasePathProvidor.cpp  databasePathProvidor.h  databaseSingleton.cpp  databaseSingleton.h
service/databasePathProvidor/: databasePathProvidor.cpp  databasePathProvidor.h
service/logger/: logger.cpp  logger.h
service/stastic/: sharedFunctions.cpp  sharedFunctions.h  staticdata.h
service/styleHelper/: MicaHelper.cpp  MicaHelper.h  StyleHelper.cpp  StyleHelper.h
service/taskManager/: timerTaskManager.cpp  timerTaskManager.h
tests/: test_booking.cpp  test_db.cpp  test_equipment_manage.cpp  test_labnexus.cpp  test_logs.cpp  test_mail.cpp
view/EquipmentClass/: equipmentclassblock.cpp  equipmentclassblock.h  equipmentclassblock.ui  equipmentclassdetail.cpp  equipmentclassdetail.h  equipmentclassdetail.ui  equipmentclassmanagehomepage.cpp  equipmentclassmanagehomepage.h  equipmentclassmanagehomepage.ui  equipmentinstancebutton.cpp  equipmentinstancebutton.h  equipmentinstancebutton.ui
view/RegisterCenter/: changepasswordadmin.cpp  changepasswordadmin.h  changepasswordadmin.ui  checknewuser.cpp  checknewuser.h  checknewuser.ui  checkuserblock.cpp  checkuserblock.h  checkuserblock.ui  registernewuser.cpp  registernewuser.h  registernewuser.ui
view/SplashScreen/: Motive.cpp  Motive.h  Motive.ui  SplashScreen.qml  SplashScreen.qrc  nativesplash.cpp  nativesplash.h  nativesplash.ui  splashscreen.cpp  splashscreen.h  splashscreen.ui
view/bookingService/: apply.cpp  apply.h  apply.ui  booking_home.cpp  booking_home.h  booking_home.ui  homepage.cpp  homepage.h  homepage.ui  managercheck.cpp  managercheck.h  managercheck.ui  rent.cpp  rent.h  rent.ui  rentteacher.cpp  rentteacher.h  rentteacher.ui  sendrent.cpp  sendrent.h  sendrent.ui  setapprover.cpp  setapprover.h  setapprover.ui
view/equipmentManage/: applysee.cpp  applysee.h  applysee.ui  equipment_home.cpp  equipment_home.h  equipment_home.ui  equipment_homepage.cpp  equipment_homepage.h  equipment_homepage.ui  exam.cpp  exam.h  exam.ui  homepage.cpp  homepage.h  kaddmanage.cpp  kaddmanage.h  kaddmanage.ui  kchangemanage.cpp  kchangemanage.h  kchangemanage.ui  kdeletemanage.cpp  kdeletemanage.h  kdeletemanage.ui
view/homepage/: administratorhomepage.cpp  administratorhomepage.h  administratorhomepage.ui  homestyles.qrc  studenthomepage.cpp  studenthomepage.h  studenthomepage.ui  teacherhomepage.cpp  teacherhomepage.h  teacherhomepage.ui
view/inventoryManage/: homepage.cpp  homepage.h  homepage.ui  inventory_home.cpp  inventory_home.h  inventory_home.ui  inventory_homepage.cpp  inventory_homepage.h
view/loginPage/: changepassword.cpp  changepassword.h  changepassword.ui  loginpage.cpp  loginpage.h  loginpage.ui  registerpage.cpp  registerpage.h  registerpage.ui  style.qrc
view/maintenanceService/: homepage.cpp  homepage.h  maintenance_home.cpp  maintenance_home.h  maintenance_home.ui  maintenance_homepage.cpp  maintenance_homepage.h  maintenance_homepage.ui
view/messageCenter/: messageblock.cpp  messageblock.h  messageblock.ui  messagedetailpage.cpp  messagedetailpage.h  messagedetailpage.ui  messagewindow.cpp  messagewindow.h  messagewindow.ui
